# HONDA-ONEROM-EDITOR

./: .gitignore  README.md
minimal-build/docs/: CHIP-TYPES.md  main.rs
minimal-build/docs/base_bins/: README.txt
minimal-build/rust/cli/: build.rs
minimal-build/rust/cli/scripts/: build-mac.sh  (+2 more)
onerom-source/: INSTALL.one-rom-main.md  LICENSE.one-rom-main.md  README.one-rom-main.md
onerom-source/docs/: CLI-MANUAL.md  CUT-MAPPING-TABLE.txt  Cargo.toml  DATALOG-SIMULATOR-GUI.md  DATALOG-SIMULATOR.md  IMAGE-SELECTION.md  LOGGING.md  MULTI-ROM-SETS.md  PI-PICO-PROGRAMMER.md  ROMS-GLORIOUS-ROMS.md  SESSION-HONDA-GUI-V3.md  VOLTAGE-LEVELS.md  arduilomonitoralldataWIFI.ino  firmware-rewrite.md  main.rs.backup-before-live-only  plugins_system_usb_Makefile.txt  plugins_system_usb_include_tusb_config.h.txt  plugins_system_usb_src_usb_main.c.txt  ram to flash 4 KB block.txt  trigger_debounce.txt  usb_ostrich.c
onerom-source/docs/old/: FAQ.md  FUTURE-ENHANCEMENTS.md  GETTING-STARTED.md  README.md  TECHNICAL-DETAILS.md
onerom-source/docs/pt6tunerpro (4)/: pt6tunerpro.xdf
onerom-source/rust/: Cargo.toml
onerom-source/rust/cli/: CHANGELOG.md  Cargo.toml  LICENSE.txt
onerom-source/rust/cli/scripts/: build-linux.sh  release.py
onerom-source/rust/cli/src/: board.rs  firmware.rs  inspect.rs  plugin.rs  update.rs  utils.rs
onerom-source/rust/cli/src/args/: plugin.rs
onerom-source/rust/cli/src/lib/: picobootx.rs  scan.rs  usb.rs
onerom-source/rust/cli/tests/: firmware.rs  general.rs
onerom-source/rust/config/: Cargo.toml
onerom-source/rust/config/json/: chip-types.json  fire-24-c.json  fire-24-d.json  fire-28-b.json  fire-28-c.json  fire-32-b.json  fire-40-b.json  ice-24-f.json  ice-24-g.json
onerom-source/rust/config/src/: fw.rs  lib.rs  mcu.rs
onerom-source/rust/config/tests/: chip_generated_tests.rs
onerom-source/rust/fw/: Cargo.toml
onerom-source/rust/fw/src/: lib.rs
onerom-source/rust/lab-new/: Cargo.toml  README.md  build.rs
onerom-source/rust/lab-new/.cargo/: config.toml
onerom-source/rust/lab-new/scripts/: attach.sh  build-all.sh  flash.sh  serial.sh
onerom-source/rust/lab-new/src/: error.rs  hw.rs  logs.rs  main.rs  rom.rs  usb.rs
onerom-source/rust/lab-new/src/cli/: commands.rs  editor.rs  mod.rs  parser.rs
onerom-source/rust/lab-new/src/output/: hexdump.rs  ihex.rs  mod.rs
onerom-source/rust/lab/src/: logs.rs  main.rs
onerom-source/rust/schema-gen/: Cargo.toml
onerom-source/rust/sdrr-fw-parser/: Cargo.toml
onerom-source/rust/sdrr-fw-parser/src/: lib.rs  parsing.rs  readers.rs  types.rs
onerom-source/rust/sdrr-gen/: Cargo.toml
onerom-source/rust/sdrr-gen/src/: file.rs  generator.rs
onerom-source/rust/sdrr-info/: Cargo.toml
onerom-source/rust/studio/: CHANGELOG.md  Cargo.toml  build.rs
onerom-source/rust/studio/manifest/: app-schema.json  sample-studio.json
onerom-source/rust/studio/scripts/: build-release.sh
onerom-source/rust/studio/src/: config.rs  hw.rs  image.rs  lib.rs  log.rs  studio.rs  style.rs
onerom-source/rust/studio/src/analyse/: device.rs  mod.rs  msg.rs  view.rs
onerom-source/rust/studio/src/app/: manifest.rs  mod.rs
onerom-source/rust/studio/src/create/: build.rs  file.rs  hw.rs  mod.rs  msg.rs  view.rs
onerom-source/rust/studio/src/device/: mod.rs  msg.rs  probe.rs  usb.rs  view.rs
scripts/: build-windows-exe.sh
(+36 files in other folders)
