[package]
name = "onerom-honda-edition"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[[bin]]
name = "onerom-honda-edition"
path = "main.rs"

[dependencies]
eframe = "0.33"
onerom-cli = { path = "../rust/cli" }
rfd = "0.15"
serialport = { version = "4.9", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
