# Workspace configuration for the Rust elements of the One ROM project
[workspace]
members = [
    "cli",
    "config",
    "database",
    "fw",
    "gen",
    "lab",
    "lab-new",
    "protocol",
    "schema-gen",
    "sdrr-check",
    "sdrr-fw-parser",
    "sdrr-gen",
    "sdrr-info",
    "studio"
]
default-members = [
    "cli",
    "config",
    "fw",
    "gen",
    "sdrr-fw-parser",
    "sdrr-gen",
    "sdrr-info",
]
resolver = "2"

[profile.release]
opt-level = 3
#lto = true
codegen-units = 1
strip = true
panic = "abort"
