[package]
name = "onerom-lab-new"
version = "0.1.0"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "One ROM Lab (V2)"
repository = "https://github.com/piersfinlayson/one-rom"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[[bin]]
name = "onerom-lab-fire"
path = "src/main.rs"

[features]
# There are two differences between the RP225xA and B embassy-rp implementations,
# as of 2026-05-31:
# - Different number and location of ADC GPIOs
# - Different total number of GPIOs
# Lab new doesn't (currently) use ADC, so it can be build a RP235xB only for now,
# for all board types.
default = [ "rp235xb" ]
rp235xa = [ "embassy-rp/rp235xa" ]
rp235xb = [ "embassy-rp/rp235xb" ]

[dependencies]
onerom-config = { path="../config", version = "0.4.11" }
onerom-protocol = { version = "0.1.0" }
onerom-database = { path="../database", version = "0.1.1" }

airfrog-rpc = { version = "0.1.1" }
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-cortex-m", "nightly" ]}
embassy-futures = { version = "0.1.1" }
embassy-rp = { version = "0.10.0", features = [ "rt", "unstable-pac", "time-driver", "intrinsics", "critical-section-impl", "imagedef-secure-exe", "boot2-generic-03h" ] }
embassy-sync = { version = "0.8.0" }
embassy-time = { version = "0.5", features = [ "generic-queue-8" ] }
embassy-usb = { version = "0.6" }
embedded-alloc = { version = "0.7" }
portable-atomic = { version = "1.10", features = [ "critical-section" ] }
cortex-m = { version = "0.7.6", features = [] }
cortex-m-rt = { version = "0.7.0"}
once_cell = { version = "1", default-features = false, features = ["critical-section"] }
static_cell = { version = "2.1", features = [ "nightly" ] }
embedded-hal = { version = "1.0.0"}
critical-section = { version = "1.2.0" }
hex = { version = "0.4", default-features = false, features = [ "alloc" ] }
hex-literal = "1.0.0"
log = "0.4"
sha1 = { version = "0.11", default-features = false }
rtt-target = { version = "0.6", features = [ "log" ] }
panic-probe = { version = "1.0" }
panic-rtt-target = "0.2"

[build-dependencies]
built = "0.8"
csv = "1.3"
